8. 添加 -v 参数，支持将宿主机目录挂载到容器内目录（bind mount）

--- a/docs/2-构造镜像.md
+++ b/docs/2-构造镜像.md
@@ -71,3 +71,24 @@
     # 每次需要同步时，执行一次该脚本即可
     rsync -av --delete /media/psf/my-docker/ /go-code/my-docker/
     ```
+
+## 3 | 为容器配置 volume
+
+1. 添加 -v 参数
+2. 解析 -v 参数，分割宿主机目录和容器目录
+3. 通过-v 分割出容器目录结合 overlayfs merged 目录，得到容器目录对应的宿主机目录位置（若不存在此目录，就创建）
+4. 将宿主机目录通过 bind mount
+5. 容器结束时，注意先 umount 容器目录，直接删除目录会清理掉宿主机上对应的目录
+6. 代码优化：将第二节的 mnt 目录，重命名为 merged 目录，这样更容易理解和明白，其是 overlayfs 形成的最终目录，也是容器的 rootfs
+
+``` sh
+$ go build .
+$ mkdir volume && cd volume && pwd
+/go-code/my-docker/volume
+$ ./my-docker run -it -v /go-code/my-docker/volume:/root/volume sh
+$ cd /root/volume 
+$ echo hello > hello1.txt
+$ exit
+# 查看宿主机 /go-code/my-docker/volume 是否有个 hello1.txt 文件，内容是否一致，一致就符合要求
+```
+
