9. 将容器对应的宿主机目录利用 tar 打包，实现镜像的打包

--- a/docs/2-构造镜像.md
+++ b/docs/2-构造镜像.md
@@ -92,3 +92,28 @@ $ exit
 # 查看宿主机 /go-code/my-docker/volume 是否有个 hello1.txt 文件，内容是否一致，一致就符合要求
 ```
 
+## 4 | 打包镜像
+
+- [从零开始写 Docker(七)---实现 mydocker commit 打包容器成镜像 -](https://www.lixueduan.com/posts/docker/mydocker/07-mydocker-commit/)
+
+1. 新建个 Command，执行对应的容器镜像打包函数
+2. 镜像打包函数：实际就是将容器对应的宿主机 merged 目录，用 tar 进行打包
+
+``` sh
+# 开启终端1
+$ ./sync.sh
+$ go build .
+$ ./my-docker run -it sh
+$ echo KubeExplorer > tmp/hello.txt
+$ cat /tmp/hello.txt
+KubeExplorer
+
+# 新开个终端2 查看打包后的镜像
+$ ./my-docker commit myimage
+commitContainer imageTar: /go-code/my-docker/imagetar/myimage.tar
+# -t 列出 tar 归档中的文件，而不解压; -f 指定 tar 文件
+$ tar -tf imagetar/myimage.tar |grep hello.txt
+./tmp/hello.txt
+```
+
+![容器打包成镜像逻辑](imgs/2-构造镜像/容器打包成镜像逻辑.png)
