--- a/docs/3-容器操作进阶.md
+++ b/docs/3-容器操作进阶.md
@@ -31,3 +31,17 @@ $ cat /var/lib/mydocker/containers/4254293419/config.json
 ```
 
 ![持久化容器信息](imgs/3-容器操作进阶/持久化容器信息.png)
+
+### 2.2 实现 ps 命令
+
+- 上面容器启动把信息存储在`var/lib/mydocker/containers` 目录下
+
+此处逻辑为
+
+- 添加 ps 命令，并增加对应的处理函数，处理函数就是下面的几点运行逻辑
+
+1. 读取 `var/lib/mydocker/containers` 目录下的所有文件夹就能拿到当前系统中的容器
+2. 读取`/var/lib/mydocker/containers/{containerID}/config.json` 文件即可拿到对应容器的详细信息。
+3. 将进行 json 解析，再打印出来，即可展示容器的运行信息
+
+![ps展示容器信息](imgs/3-容器操作进阶/ps展示容器信息.png)
