13. 增加 logs 命令，将容器 stdout 和 stderr 写入到宿主机对应容器目录下的 log.txt 文件中，执行logs命令时将文件中内容打印出来

--- a/docs/3-容器操作进阶.md
+++ b/docs/3-容器操作进阶.md
@@ -101,3 +101,9 @@ systemd(1)─┬─accounts-daemon(714)─┬─{accounts-daemon}(721)
 /var/lib/mydocker/containers#
 ```
 
+## 4. 实现 logs 命令
+
+- [从零开始写 Docker(十)---实现 mydocker logs 查看容器日志 -](https://www.lixueduan.com/posts/docker/mydocker/10-mydocker-logs/)
+
+1. 非 tty 形式，也就是 detach 形式，将 stdout 和 stderr 重定向到指定的宿主机 log 文件，容器日志写入该文件
+2. logs 命令 —— 读取上面的 log 文件，输出到 os.Stdout，也就是打印到屏幕上
