--- a/docs/3-容器操作进阶.md
+++ b/docs/3-容器操作进阶.md
@@ -107,3 +107,108 @@ systemd(1)─┬─accounts-daemon(714)─┬─{accounts-daemon}(721)
 
 1. 非 tty 形式，也就是 detach 形式，将 stdout 和 stderr 重定向到指定的宿主机 log 文件，容器日志写入该文件
 2. logs 命令 —— 读取上面的 log 文件，输出到 os.Stdout，也就是打印到屏幕上
+
+## 5. 实现 exec 命令
+
+- [从零开始写 Docker(十一)---实现 mydocker exec 进入容器内部 -](https://www.lixueduan.com/posts/docker/mydocker/11-mydocker-exec/)
+
+### 5.1 实现过程
+
+1. exec 命令实现是将当前进程通过 setns 命令放入到容器的 linux  namespace 中，从而与容器进程进行交互，进入了容器进程的 namespace 隔离环境中
+2. 难点1在于： 多线程的进程无法使用 setns 命令，而 go 程序由于 runtime 机制，默认会启动多个内核级线程（M），因此为了解决此问题，采用了 cgo
+3. 解决思路：cgo 机制可以使用 c 语言，c 语言是单线程，因此用 c 语言执行 setns 命令，将当前进程放入到容器 namespace 中，之后再执行用户 exec 命令参数，也就是启动 exec 用户指定的进程
+4. 难点2：c 包裹着 go 程序 —— 就需要 c 代码段先执行，因此 c 代码段会加`__attribute__((constructor))` 开头，表示代码运行就执行，类似构造函数；但是只有 exec 命令需要此部分函数，run、stop、ps 都不需要此函数，若 C 代码在这些命令前都执行，那就会产生问题
+5. 解决思路：仍是让 C 代码先执行，不过C 代码部分增加个环境变量判断（有配置该环境变量，就会执行 setns 逻辑）；因为默认都为配置该环境变量，所以先执行 go 程序（此时所有命令都正常运行）；当执行 exec 命令时，配置该环境变量，但是 C 代码已经运行过了，如何再次运行？？ —— 答，`/proc/self/exe`，通过该参数用户可再次重新运行当前程序，相当于重启个新进程，因此也会重新运行 C 代码逻辑，因此可以使用 setns 进入到容器进程的 namespace 内，在容器进程内运行 exec 命令指定的用户参数（该参数也是通过 exec 配置的环境变量传入的），因此相当于在容器进程 namespace 中启动了用户指定的进程
+
+### 5.2 补充知识
+
+#### 5.2.1 什么是 cgo
+
+`cgo` 是 Go 语言提供的一个特性，允许 Go 代码调用 **C 代码、C 语言库**，从而**实现 Go 和 C 语言的互操作**。
+
+在 Go 代码中，`cgo` 通过 `import "C"` 语句引入 C 代码，可以：
+
+- 调用 C 语言的函数、结构体和变量。
+- 访问 C 语言库（如 `libc`、`sqlite`、`openssl` 等）。
+- 在 Go 代码中嵌入 C 代码片段。
+
+#### 5.2.2 cgo使用举例说明
+
+- `import "C"` 上面的 `/* ... */` 是 C 代码，会被 `cgo` 解析并编译。
+
+- `C.hello()` 直接调用 C 代码中的 `hello()`。
+- 可以使用 `#cgo` 指令来链接外部 C 库
+- `#cgo LDFLAGS: -lm` 让 `cgo` 连接 `libm`（数学库）。
+- `C.sqrt(16)` 直接调用 C 的 `sqrt()`。
+
+``` go
+// 举例1. 调用 C 语言函数
+// - import "C"` 上面的 `/* ... */` 是 C 代码，会被 `cgo` 解析并编译。
+// - `C.hello()` 直接调用 C 代码中的 `hello()`。
+// - C语言的代码要用 /* ... */ 括起来
+package main
+
+/*
+#include <stdio.h>
+void hello() {
+    printf("Hello from C!\n");
+}
+*/
+import "C"
+
+func main() {
+    C.hello()  // 调用 C 语言的 hello() 函数
+}
+
+// 举例2. 访问 C 语言库
+// - 可以使用 `#cgo` 指令来链接外部 C 库
+// - `#cgo LDFLAGS: -lm` 让 `cgo` 连接 `libm`（数学库）。
+// - `C.sqrt(16)` 直接调用 C 的 `sqrt()`。
+package main
+
+/*
+#cgo LDFLAGS: -lm  // 链接 C 语言的数学库（libm）
+#include <math.h>
+*/
+import "C"
+import "fmt"
+
+func main() {
+    result := C.sqrt(16)  // 调用 C 语言的 sqrt() 函数
+    fmt.Println("Sqrt(16) =", result)
+}
+
+```
+
+### 5.3 本模块使用 cgo 的原因
+
+#### 5.3.1为什么要使用 cgo
+
+- 对于 Mount Namespace 来说， 一个具有 多线程的进程是无法使用 setns 调用进入到对应的命名空间的。 但是， Go 每启动一个程序就会 进入多线程状态， 因此无法简简单单地在 Go 里面直接调用系统调用， 使当前的进程进入对应 的 Mount Namespace。 这里需要借助 C 来实现这个功能 。
+- 是否可以将 go 进程变为单线程
+   - 答 —— 不可以
+      - 简单说，go runtime 是 GMP 模型，G 指的是 goroutine（用户级线程），M 指的是 内核级线程，P 是将 G 调度到 M 上来完成工作
+      - 所以也就是说 Go 运行时默认多线程 —— 会启动 多个M（内核级线程）
+      - 因此即使只有一个 goroutine，实现也是有多个 M —— 也就是多线程 —— 因此无法使用 setns
+   - 因为 Go 运行时默认启动了多线程（多 goroutine 调度）
+      - Go 语言的运行时会默认创建多个线程（M 结构），并在这些线程上调度 goroutines（G 结构）。
+      - 即使你的 Go 代码看似只有一个 goroutine，Go 运行时仍可能会创建多个线程（特别是在 GOMAXPROCS > 1 时）。
+      - 由于 Linux 规定 多线程进程不能用 setns 进入 Mount Namespace，所以 Go 进程很难直接调用 setns 进入目标命名空间。
+   - Go 不能简单地 "停用" 其他线程
+      - Go 运行时会动态管理线程，无法完全保证 setns 运行时只有一个线程。
+      - 即使你在 main 线程中调用 runtime.LockOSThread() 绑定当前 goroutine 到一个线程，这个线程仍然属于一个多线程进程，所以 setns 仍然会失败。
+- C 代码可以创建单线程进程
+   - C 代码可以作为一个“包装器”来启动 Go 代码，确保 Go 进程在进入 Mount Namespace 之后再执行
+      - C 代码（单线程进程）先进入 Mount Namespace（通过 setns）。
+      - C 代码再 exec 启动 Go 代码（这样 Go 进程会在新的 Mount Namespace 内运行）
+- 过程
+   1. C 代码 setns 成功后，exec 启动 Go 进程，初始状态是单线程的。
+   2. Go 进程在运行后可能会创建新的线程，但这不会影响它已经在新的 Mount Namespace 里。
+
+#### 5.3.2 如何使 C 代码包装 go 代码
+
+1. 首先就是要保证 C 代码在 go 代码前执行（类似构造函数，程序运行时首先就会启动 C 代码）
+2. 考虑个问题 —— 只有 exec 命令会需要使用 C 代码，而其他命令不需要 C 代码，C 代码的执行会影响该项目的其他命令
+3. 解决方案 —— 在这段 C 代码前面一开始的位置就添加了环境变量检测，没有对应的环境变量时，就直接退出
+   - 对于不使用 exec 功能的 Go 代码 ，只要不设置对应的环境变量 ， 那么当 C 程序检测到没有这个环境变量时，就会直接退出， 继续执行原来的代码， 并不会影响原来的逻辑。
+   - 对于我们使用 exec 来说，当容器名和对应的命令传递进来以后，程序已经执行了，而且 那段 C 代码也应该运行完毕。那么，怎么指定环境变量让它再执行一遍呢？这里就用到了这 个／proc/self/exe 。这里又创建了一个 command ， 只不过这次只是简单地 fork 出来一个进程，不 需要这个进程拥有什么命名空间的隔离，然后把这个进程的标准输入输出都绑定到宿主机上 。 这样去 run 这里的进程时，实际上就是又运行了 一遍自己的程序，但是这时有一点不同的就是， 再一次运行的时候已经指定了环境变量，所以 C 代码执行的时候就能拿到对应的环境变量 ， 便可以进入到指定的 Namespace 中进行操作了
