15. 在 stop 分支的基础上，优化 rm 逻辑，增加 -f 强制删除参数（可以移除 running 状态的容器，相当于 stop 和 rm 的结合）

--- a/docs/3-容器操作进阶.md
+++ b/docs/3-容器操作进阶.md
@@ -212,3 +212,9 @@ func main() {
 3. 解决方案 —— 在这段 C 代码前面一开始的位置就添加了环境变量检测，没有对应的环境变量时，就直接退出
    - 对于不使用 exec 功能的 Go 代码 ，只要不设置对应的环境变量 ， 那么当 C 程序检测到没有这个环境变量时，就会直接退出， 继续执行原来的代码， 并不会影响原来的逻辑。
    - 对于我们使用 exec 来说，当容器名和对应的命令传递进来以后，程序已经执行了，而且 那段 C 代码也应该运行完毕。那么，怎么指定环境变量让它再执行一遍呢？这里就用到了这 个／proc/self/exe 。这里又创建了一个 command ， 只不过这次只是简单地 fork 出来一个进程，不 需要这个进程拥有什么命名空间的隔离，然后把这个进程的标准输入输出都绑定到宿主机上 。 这样去 run 这里的进程时，实际上就是又运行了 一遍自己的程序，但是这时有一点不同的就是， 再一次运行的时候已经指定了环境变量，所以 C 代码执行的时候就能拿到对应的环境变量 ， 便可以进入到指定的 Namespace 中进行操作了
+
+## 6. 优化 rm 命令
+
+1. 在上面 stop 命令基础上，优化 rm 命令
+2. mydocker rm contaienr-id  只能清理 stopped 状态的容器残留资源（需要先执行 mydocker stop container-id
+3. 新增 -f 参数，强制删除，mydocker rm -f contaienr-id 可清理 running 状态的容器残留资源
