16. 优化overlayfs目录结构，为每个容器创建个overlayfs目录，使每个容器有自己的rootfs，实现了rootfs隔离;但目前并未是实现cgroup隔离，后续再进行优化

--- a/docs/3-容器操作进阶.md
+++ b/docs/3-容器操作进阶.md
@@ -218,3 +218,30 @@ func main() {
 1. 在上面 stop 命令基础上，优化 rm 命令
 2. mydocker rm contaienr-id  只能清理 stopped 状态的容器残留资源（需要先执行 mydocker stop container-id
 3. 新增 -f 参数，强制删除，mydocker rm -f contaienr-id 可清理 running 状态的容器残留资源
+
+## 7. 优化 overlayfs（实现容器间 rootfs 隔离）
+
+- [从零开始写 Docker(十四)---重构：实现容器间 rootfs 隔离 -](https://www.lixueduan.com/posts/docker/mydocker/14-isolation-rootfs-between-containers/)
+
+1. 以往代码程序都是使用指定的 overlayfs 目录（如 upper、lower、work、merged 等目录是写死的），因此只能创建一个容器
+2. 现在改为动态的，会为每个容器根据容器id创建一个目录，存放 overlayfs 相关目录，因此现在每个容器都有自己的 merged 目录，实现了 rootfs 隔离
+3. 修改之处在 overlayfs 相关目录使用地方，另外优化了 commit 命令（也会为每个容器创建对应的镜像打包目录）
+4. 待做：虽然现在实现了 rootfs 隔离，但并未实现 cgroupfs 隔离（仍是写死的目录，没有为每个容器创建单独的目录），所以若配置 -mem 等信息，多个容器仍会有问题，此问题后续进行优化
+5. 新知识点 —— log.Fatal = log.Info + os.Exit(1) ，也就是若使用 log.Fatal ，打印信息后会自动终端程序，避免继续执行
+
+``` sh
+$ mkdir -r /var/lib/mydocker/image
+# 需要将镜像提前防止到此处
+$ cp busybox.tar /var/lib/mydocker/image/
+$ ls /var/lib/mydocker/image
+# 运行容器
+$ ./my-docker run -it busybox sh
+# 查看容器
+$ ./my-docker ps
+# 打包容器为镜像
+$ ./my-docker commit 4782854783 busybox-2
+commitContainer imageTar: /var/lib/mydocker/image-tar/4782854783/busybox-2.tar
+# 停止并移除容器
+$ ./my-docker rm -f 4782854783
+```
+
