17. 增加-e命令，可在容器启动时为容器添加环境变量；同时为exec增加处理逻辑，使其可以获取到容器进程现有环境变量，但无法同步环境变量的改动

--- a/docs/3-容器操作进阶.md
+++ b/docs/3-容器操作进阶.md
@@ -245,3 +245,22 @@ commitContainer imageTar: /var/lib/mydocker/image-tar/4782854783/busybox-2.tar
 $ ./my-docker rm -f 4782854783
 ```
 
+## 8. 增加 -e 设置环境变量
+
+1. 增加 -e 为容器进程设置环境变量
+2. 引入个问题：exec 进入容器进程后，无法获取到容器进程内的已设置的环境变量
+3. 解决方法：在 exec 命令对应的响应函数中，通过容器 pid 获取容器进程已设置的环境变量，然后设置到exec对应的进程中；不过后续容器进程环境变量的新增或改动，不会同步到 exec 进程中
+
+``` sh
+# 启动容器
+$ ./my-docker run -it -e s1=hello -e s2=world busybox sh
+# 查看环境变量
+$ echo $s1 $s2
+hello world
+
+# exec 进入容器，并查看环境变量, 是一致的
+$ ./my-docker exec 4541869436 sh
+$ echo $s1 $s2
+hello world
+```
+
