--- a/docs/4-容器网络构建.md
+++ b/docs/4-容器网络构建.md
@@ -42,3 +42,437 @@ root@ubuntu20:/go-code/my-docker/pkg/network# cat /var/lib/mydocker/network/ipam
 {"192.168.0.0/24":"000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"}
 ```
 
+## 2 | 创建 bridge、配置 iptables 等
+
+### 2.1 实现过程
+
+1. Create 根据子网信息创建 Bridge 设备并初始化
+
+   - ``` sh
+     # 1. 创建网桥
+     sudo brctl addbr br0
+     # 2. 为bridge分配IP地址，激活上线
+     sudo ip addr add 172.18.0.1/24 dev br0
+     # 3. 启动网桥设备
+     sudo ip link set br0 up
+     # 4. 配置 nat 规则让容器可以访问外网， SNAT 将源ip  172.18.0.0/24 转为 宿主机ip
+     # 这条命令可以简单理解为： 符合该网段，去往 br0 网桥的流量不需要进行 SNAT（也就是容器网桥内部不需要进行 SNAT)
+     sudo iptables -t nat -A POSTROUTING -s 172.18.0.0/24 -o eth0 -j MASQUERADE
+     # 如果想让 172.18.0.0/24 网段的设备 只能通过 eth0 访问外网，可以更明确地指定
+     sudo iptables -t nat -A POSTROUTING -s 172.18.0.0/24 -o eth0 -j MASQUERADE
+     ```
+
+2. Delete 删除对应名称的 Bridge 设备即可
+
+   - ``` sh
+     # 1. 删除网桥
+     ip link del br0
+     # 2. 删除 iptables(待做，目前代码中未包含) 
+     iptables -t nat -D POSTROUTING -s 172.18.0.0/24 -o eth0 -j MASQUERADE
+     ```
+
+3. Connect 创建 veth pair 对
+
+   - ``` sh
+     # 1. 创建 Veth 设备 —— veth1（宿主机端）cif-veth1（容器端）
+     ip link add veth1 type veth peer name cif-veth1
+     # 2. 绑定 veth1 到 Bridge
+     ip link set veth1 master br0
+     # 3. 启动 veth1（宿主机端）—— Go 代码的 netlink.LinkSetUp() 只执行了这一条命令。
+     ip link set veth1 up
+     
+     # 4. 启动 cif-veth1（容器端）—— 此处未启动，Go 代码中没有这个操作，所以 容器端 veth 设备默认是 DOWN 状态
+     ip link set cif-veth1 up
+     ```
+
+4. Disconnect 删除 verh pair 对
+
+   - ``` sh
+     # 1. 获取 Veth 设备
+     ip link show veth1
+     # 2. 解除 Veth 设备与 Bridge 的绑定
+     ip link set veth1 nomaster
+     # 3. 删除 Veth 设备 —— Veth 设备是成对的，这会导致它的对端 cif-veth1 也被删除
+     ip link delete veth1
+     ```
+
+### 2.2 测试
+
+#### 2.2.1 测试网桥和 iptables 创建
+
+``` sh
+# 1. 测试 Create 函数，
+root@ubuntu20:/go-code/my-docker/pkg/network# ip link show
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp0s5: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
+    link/ether 00:1c:42:1d:ce:71 brd ff:ff:ff:ff:ff:ff
+root@ubuntu20:/go-code/my-docker/pkg/network#
+root@ubuntu20:/go-code/my-docker/pkg/network# go test -v -run TestBridgeNetworkDriver_Create
+=== RUN   TestBridgeNetworkDriver_Create
+    bridge_driver_test.go:16: create network: &{testbridge 192.168.0.0/24 bridge}
+--- PASS: TestBridgeNetworkDriver_Create (0.02s)
+PASS
+ok  	github.com/oceanweave/my-docker/pkg/network	0.017s
+# 查看到新创建的网桥 testbridge
+root@ubuntu20:/go-code/my-docker/pkg/network# ip link show
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp0s5: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
+    link/ether 00:1c:42:1d:ce:71 brd ff:ff:ff:ff:ff:ff
+4: testbridge: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/ether 1e:58:54:8e:03:dd brd ff:ff:ff:ff:ff:ff
+# 查看 bridge 上配置的 nat iptables 规则
+root@ubuntu20:/go-code/my-docker/pkg/network# iptables-save | grep testbridge
+-A POSTROUTING -s 192.168.0.0/24 ! -o testbridge -j MASQUERADE
+
+
+```
+
+#### 2.2.2 测试网桥删除和 iptables 清理
+
+``` sh
+# 测试 Delete 函数
+root@ubuntu20:/go-code/my-docker/pkg/network# go test -v -run TestBridgeNetworkDriver_Delete
+=== RUN   TestBridgeNetworkDriver_Delete
+    bridge_driver_test.go:30: delete network: testbridge
+--- PASS: TestBridgeNetworkDriver_Delete (0.05s)
+PASS
+ok  	github.com/oceanweave/my-docker/pkg/network	0.052s
+# 成功删除网桥
+root@ubuntu20:/go-code/my-docker/pkg/network# ip link show
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp0s5: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
+    link/ether 00:1c:42:1d:ce:71 brd ff:ff:ff:ff:ff:ff
+# 但是目前没有清理 iptables （后续待做）
+root@ubuntu20:/go-code/my-docker/pkg/network# iptables-save | grep testbridge
+-A POSTROUTING -s 192.168.0.0/24 ! -o testbridge -j MASQUERADE
+# 手动清理 iptables 规则
+root@ubuntu20:/go-code/my-docker/pkg/network# iptables -t nat -D POSTROUTING -s 192.168.0.0/24 ! -o testbridge -j MASQUERADE
+root@ubuntu20:/go-code/my-docker/pkg/network# iptables-save | grep testbridge
+root@ubuntu20:/go-code/my-docker/pkg/network#
+```
+
+#### 2.2.3 测试创建 veth-pair 并加入到网桥
+
+``` sh
+root@ubuntu20:/go-code/my-docker/pkg/network# ip link show
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp0s5: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
+    link/ether 00:1c:42:1d:ce:71 brd ff:ff:ff:ff:ff:ff
+# 1. 先创建网桥
+root@ubuntu20:/go-code/my-docker/pkg/network# go test -v -run TestBridgeNetworkDriver_Create
+=== RUN   TestBridgeNetworkDriver_Create
+    bridge_driver_test.go:16: create network: &{testbridge 192.168.0.0/24 bridge}
+--- PASS: TestBridgeNetworkDriver_Create (0.00s)
+PASS
+# 2. 创建 veth-pair 并加入到网桥  测试 Connect 函数
+ok  	github.com/oceanweave/my-docker/pkg/network	0.006s
+root@ubuntu20:/go-code/my-docker/pkg/network# go test -v -run TestBridgeNetworkDriver_Connect
+=== RUN   TestBridgeNetworkDriver_Connect
+--- PASS: TestBridgeNetworkDriver_Connect (0.00s)
+PASS
+ok  	github.com/oceanweave/my-docker/pkg/network	0.006s
+root@ubuntu20:/go-code/my-docker/pkg/network# ip link show
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp0s5: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
+    link/ether 00:1c:42:1d:ce:71 brd ff:ff:ff:ff:ff:ff
+5: testbridge: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc noqueue state DOWN mode DEFAULT group default qlen 1000
+    link/ether e6:56:90:25:24:d2 brd ff:ff:ff:ff:ff:ff
+# veth-pair 容器端
+6: cif-testc@testc: <BROADCAST,MULTICAST> mtu 1500 qdisc noop state DOWN mode DEFAULT group default qlen 1000
+    link/ether 4e:c2:b3:4b:4b:43 brd ff:ff:ff:ff:ff:ff
+# veth-pair 宿主机端  绑定到网桥  master  testbridge
+# veth-pair 宿主机端命名取 容器 id 前五位（此处测试，容器id取名为testcontainer,因此前五位是 testc）
+# veth-pair 容器端命名 前面加 cif- 因此为 cif-testc
+7: testc@cif-testc: <NO-CARRIER,BROADCAST,MULTICAST,UP,M-DOWN> mtu 1500 qdisc noqueue master testbridge state LOWERLAYERDOWN mode DEFAULT group default qlen 1000
+    link/ether e6:56:90:25:24:d2 brd ff:ff:ff:ff:ff:ff
+```
+
+#### 2.2.4 测试
+
+``` sh
+6: cif-testc@testc: <BROADCAST,MULTICAST> mtu 1500 qdisc noop state DOWN mode DEFAULT group default qlen 1000
+    link/ether 4e:c2:b3:4b:4b:43 brd ff:ff:ff:ff:ff:ff
+7: testc@cif-testc: <NO-CARRIER,BROADCAST,MULTICAST,UP,M-DOWN> mtu 1500 qdisc noqueue master testbridge state LOWERLAYERDOWN mode DEFAULT group default qlen 1000
+    link/ether e6:56:90:25:24:d2 brd ff:ff:ff:ff:ff:ff
+root@ubuntu20:/go-code/my-docker/pkg/network# go test -v -run TestBridgeNetworkDriver_Disconnect
+=== RUN   TestBridgeNetworkDriver_Disconnect
+--- PASS: TestBridgeNetworkDriver_Disconnect (0.02s)
+PASS
+ok  	github.com/oceanweave/my-docker/pkg/network	0.022s
+root@ubuntu20:/go-code/my-docker/pkg/network# ip link show
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp0s5: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
+    link/ether 00:1c:42:1d:ce:71 brd ff:ff:ff:ff:ff:ff
+5: testbridge: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc noqueue state DOWN mode DEFAULT group default qlen 1000
+    link/ether 00:00:00:00:00:00 brd ff:ff:ff:ff:ff:ff
+6: cif-testc@testc: <BROADCAST,MULTICAST> mtu 1500 qdisc noop state DOWN mode DEFAULT group default qlen 1000
+    link/ether 4e:c2:b3:4b:4b:43 brd ff:ff:ff:ff:ff:ff
+# 可以看到，之前的 master testbridge 属性不见了，说明解绑成功
+7: testc@cif-testc: <NO-CARRIER,BROADCAST,MULTICAST,UP,M-DOWN> mtu 1500 qdisc noqueue state LOWERLAYERDOWN mode DEFAULT group default qlen 1000
+    link/ether e6:56:90:25:24:d2 brd ff:ff:ff:ff:ff:ff
+```
+
+
+
+### 2.3 linux 知识
+
+#### 2.3.1 linux 网络设备索引号递增
+
+- Linux `ifindex`（设备索引）是递增的，即使设备被删除，也不会重复使用已分配的编号。
+- 这是一种 Linux 设备管理的设计，以防止短时间内编号重复带来的问题。
+
+``` sh
+# 测试 创建 和 删除，发现分配的设备索引号 仍是递增
+# 创建
+ip link add testbridge type bridge
+ip link show
+# 删除重建  你会发现 ifindex 仍然会递增，而不会回到之前删除的编号。
+ip link del newbridge
+ip link add testbridge type bridge
+ip link show
+
+
+root@ubuntu20:/go-code/my-docker/pkg/network# ip link show
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp0s5: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
+    link/ether 00:1c:42:1d:ce:71 brd ff:ff:ff:ff:ff:ff
+3: testbridge: <BROADCAST,MULTICAST> mtu 1500 qdisc noqueue state DOWN mode DEFAULT group default qlen 1000
+    link/ether a6:d8:02:0c:94:7f brd ff:ff:ff:ff:ff:ff
+root@ubuntu20:/go-code/my-docker/pkg/network# ip link del testbridge
+
+root@ubuntu20:/go-code/my-docker/pkg/network# ip link show
+1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
+2: enp0s5: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc fq_codel state UP mode DEFAULT group default qlen 1000
+    link/ether 00:1c:42:1d:ce:71 brd ff:ff:ff:ff:ff:ff
+4: testbridge: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UNKNOWN mode DEFAULT group default qlen 1000
+    link/ether 1e:58:54:8e:03:dd brd ff:ff:ff:ff:ff:ff
+
+# 为什么 testbridge 变成了 4？
+你最初创建了 testbridge，系统给它分配了 ifindex = 3。
+你执行了 ip link del testbridge，删除了 testbridge，但编号 3 不会被复用。
+你重新创建 testbridge 时，系统会使用下一个可用的编号，也就是 4。
+Linux 这样设计是为了：
+
+避免短时间内创建/删除设备时，旧的 ifindex 仍被使用导致冲突。
+提供更好的网络设备管理，防止某些程序误用已删除设备的编号。
+```
+
+#### 2.3.2 查看 iptables 规则
+
+要查看 `iptables` 中关于 `testbridge` 的规则，可以使用以下命令：
+
+##### **1. 查看 NAT 规则**（如果 `testbridge` 作为 NAT 设备）
+
+```sh
+sudo iptables -t nat -L -v | grep testbridge
+```
+
+或者：
+
+```sh
+sudo iptables -t nat -L -v --line-numbers
+```
+
+##### **2. 查看 FORWARD 规则**（如果 `testbridge` 影响数据包转发）
+
+```sh
+sudo iptables -t filter -L FORWARD -v | grep testbridge
+```
+
+##### **3. 查看所有规则**（查找 `testbridge` 相关的所有规则）
+
+```sh
+sudo iptables-save | grep testbridge
+```
+
+##### **4. 如果使用 `nftables`（新的防火墙框架）**
+
+如果你的系统使用的是 `nftables` 而不是 `iptables`，可以使用：
+
+```sh
+sudo nft list ruleset | grep testbridge
+```
+
+**如果 `iptables` 规则中没有 `testbridge` 相关条目，说明它可能没有被 `iptables` 直接管理，或者规则在 `nftables` 中。**
+
+#### 2.3.3 删除 iptables 规则
+
+``` sh
+$ iptables-save | grep testbridge
+-A POSTROUTING -s 192.168.0.0/24 ! -o testbridge -j MASQUERADE
+```
+
+要删除这条 `iptables` 规则，你可以按照以下步骤操作：
+
+##### **方法 1：使用 `iptables -D`（推荐）**
+
+`iptables -D` 用于删除一条指定的规则。如果你能确定它的完整规则内容，可以直接执行：
+
+```sh
+iptables -t nat -D POSTROUTING -s 192.168.0.0/24 ! -o testbridge -j MASQUERADE
+```
+
+------
+
+##### **方法 2：查看规则编号后删除**
+
+如果上面的命令执行失败（例如规则参数不完全匹配），可以先**列出 `POSTROUTING` 规则的编号**，然后按编号删除：
+
+###### **1. 列出 `POSTROUTING` 规则编号**
+
+```sh
+iptables -t nat -L POSTROUTING --line-numbers
+```
+
+示例输出：
+
+```
+Chain POSTROUTING (policy ACCEPT)
+num  target     prot opt source        destination  
+1    MASQUERADE all  --  192.168.0.0/24 ! testbridge 
+```
+
+**这里第 1 行（num = 1）是要删除的规则**。
+
+###### **2. 按编号删除**
+
+```sh
+iptables -t nat -D POSTROUTING 1
+```
+
+（如果规则排在第 2 行，改为 `iptables -t nat -D POSTROUTING 2`）
+
+------
+
+##### **方法 3：编辑 `iptables-save` 并还原**
+
+如果你使用的是 `iptables-save` 持久化规则，可以手动编辑后重新加载：
+
+###### **1. 备份当前规则**
+
+```sh
+iptables-save > /tmp/iptables-backup.rules
+```
+
+###### **2. 编辑规则文件**
+
+```sh
+vim /tmp/iptables-backup.rules
+```
+
+找到：
+
+```
+-A POSTROUTING -s 192.168.0.0/24 ! -o testbridge -j MASQUERADE
+```
+
+删除这一行后保存。
+
+###### **3. 重新加载规则**
+
+```sh
+iptables-restore < /tmp/iptables-backup.rules
+```
+
+------
+
+##### **方法 4：清空 `POSTROUTING` 规则（不推荐，影响所有规则）**
+
+如果想**清空整个 `POSTROUTING` 规则链**（不只是 `testbridge` 相关规则），可以执行：
+
+```sh
+iptables -t nat -F POSTROUTING
+```
+
+⚠ **注意**：此方法会删除 `POSTROUTING` 里的所有规则，不只是 `testbridge` 相关的。
+
+------
+
+##### **总结**
+
+- 推荐
+
+  方法 1：
+
+  ```sh
+  iptables -t nat -D POSTROUTING -s 192.168.0.0/24 ! -o testbridge -j MASQUERADE
+  ```
+
+- 如果失败，使用方法 2，先用 `iptables -L --line-numbers` 获取编号，然后 `iptables -D` 删除。
+
+- 如果规则需要持久化，使用 `iptables-save` 和 `iptables-restore` 编辑规则。
+
+
+
+
+
+### 2.4 go 知识
+
+``` sh
+# 报错
+$ go test -v run TestBridgeNetworkDriver_Create
+cannot find package "." in:
+	/go-code/my-docker/vendor/run
+cannot find package "." in:
+	/go-code/my-docker/vendor/TestBridgeNetworkDriver_Create
+```
+
+#### **正确的用法**
+
+##### **方法 1：加 `-` 符号**
+
+```
+sh
+
+
+复制编辑
+go test -v -run TestBridgeNetworkDriver_Create
+```
+
+✅ **`-run` 选项用于匹配测试函数的名称**，`TestBridgeNetworkDriver_Create` 是你要执行的测试函数。
+
+##### **方法 2：指定包路径**
+
+如果 `TestBridgeNetworkDriver_Create` 在 `network` 包下：
+
+```
+sh
+
+
+复制编辑
+go test -v -run TestBridgeNetworkDriver_Create ./network
+```
+
+✅ 这样 `go test` 会在 `./network` 目录下运行测试。
+
+##### **方法 3：运行所有测试**
+
+如果你不确定具体的 `-run` 选项格式，可以直接运行：
+
+```
+sh
+
+
+复制编辑
+go test -v ./...
+```
+
+✅ 这样会执行所有测试函数，看看 `TestBridgeNetworkDriver_Create` 是否在其中。
+
+##### **总结**
+
+- **错误的写法**：`go test -v run TestBridgeNetworkDriver_Create`（缺少 `-`）
+- **正确的写法**：`go test -v -run TestBridgeNetworkDriver_Create`
+- **如果在子包**：`go test -v -run TestBridgeNetworkDriver_Create ./network`
+- **执行所有测试**：`go test -v ./...`
+
+这样就能正确运行你的测试函数了！🚀
+
